# suno-client-projectm-video-creator-glm5.2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  RULES.md  vcpkg.json
.agent/: Phase_1.md
apps/app_shell/: CMakeLists.txt  Main.qml  main.cpp
cmake/: CPM.cmake
